CKA/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: argocd
 namespace: argocd
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - "argocd.local"
  rules:
    - matches:
       - path:
           type: PathPrefix
           value: /
      backendRefs:
         - name: argocd-server
           port: 80
